@@ -1,4 +1,5 @@
-% Generated by roxygen2 (4.0.2): do not edit by hand
+% Generated by roxygen2 (4.1.0): do not edit by hand
+% Please edit documentation in R/seas.R
 \name{seas}
 \alias{seas}
 \title{Seasonal Adjustment with X-13ARIMA-SEATS}
@@ -101,7 +102,7 @@ It is possible to use the almost complete syntax of X-13ARIMA-SEAT via the
 \code{...} argument. The syntax of X-13ARIMA-SEATS uses \emph{specs} and
 \emph{arguments}, and each spec optionally contains some arguments. In
 \code{seas}, an additional spec-argument can be added by separating spec and
-argument by a dot (\code{.}) (see examples). Alternatvily, 'spec.argument'
+argument by a dot (\code{.}) (see examples). Alternatvily, spec-argument
 combinations can be supplied as a named list, which is useful for programming.
 
 Similarily, the
