@@ -1,4 +1,5 @@
-% Generated by roxygen2 (4.0.2): do not edit by hand
+% Generated by roxygen2 (4.1.0): do not edit by hand
+% Please edit documentation in R/summary.R
 \name{summary.seas}
 \alias{print.summary.seas}
 \alias{summary.seas}
@@ -37,12 +38,37 @@ for each coefficient.}
   method for \code{"lm"}.
 }
 \description{
-\code{summary} method for class "seas".
+Like the corresponding mehtod for \code{"lm"} objects, the method for
+\code{"seas"} objects returns the estimated coefficients, its standard errors,
+z-statistics and corresponding (two-sided) p-values. Coefficients are returned
+both for the exogenous regressors and the coefficients of the ARIMA model.
+}
+\details{
+The lower part of the output shows additional information on the estimation:
+\describe{
+\item{Adjustment}{use of SEATS or X11}
+\item{ARIMA}{structure of the seasonal ARIMA model}
+\item{Obs.}{number of observations}
+\item{Transform}{prior transformation}
+\item{AICc, BIC}{value of the information criterion (lower is better)}
+\item{QS}{test for seasonality in the final series; null hypothesis: no
+seasonality in final; signif. codes are shown if the null hypothesis is
+rejected. QS statistics for more series (e.g., the original series) can be
+extracted with \code{\link{qs}}.}
+\item{Box-Ljung}{test for residual autocorrelation; null hypothesis: no
+autocorrelation in residuals; signif. codes are shown if the null hypothesis
+is rejected. The test statistic is the result of
+\code{Box.test(resid(m), lag = 24, type = "Ljung")}}
+\item{Shapiro}{test for normality of the residuals; null hypothesis: normal
+distribution of the residuals; signif. codes are shown if the null
+hypothesis is rejected. The test statistic is the result of
+\code{shapiro.test(resid(m))}}
+}
 }
 \examples{
 \dontrun{
-x <- seas(AirPassengers)
-summary(x)
+m <- seas(AirPassengers)
+summary(m)
 }
 }
 
